2007-10-12  Don Allingham  <don@gramps-project.org>
	* src/gen/lib/note.py (Note.get): fix typo

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Filters/Rules/Event/_MatchesSourceFilter.py: new filter
	* src/Filters/Rules/Event/__init__.py: load new filter
	* src/Filters/Rules/Event/Makefile.am: distribute
	* src/Filters/Rules/Person/_MatchesEventFilter.py: new filter
	* src/Filters/Rules/Person/__init__.py: load new filter
	* src/Filters/Rules/Person/Makefile.am: distribute
	* po/POTFILES.in: translate new filters
	This is issue #1249

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/gen/db/dbdir.py: do name group change from GrampsBSDDB to dbdir.

2007-10-11  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: fix callback references
	* src/DbState.py: fix callback references

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Filters/_FilterParser.py: avoid unknown filters crashing
	* src/Filters/Rules/Person/__init__.py: remove private filter list and register, not used.

2007-10-11 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/gen/db/base.py: allow check without gid creation on all objects
	* src/GrampsDbUtils/_ReadXML.py: on reference read, don't create gid.
	This also patches a privacy setting error on placeobj in place tag section

2007-10-11 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DateHandler/__init__.py: use portuguese date handler

2007-10-11  Don Allingham  <don@gramps-project.org>
	* src/gen/db/base.py:
	* src/GrampsDb_GrampsDbWriteXML.py:
	* src/gen/db/__init__.py: fix callback call

2007-10-10 Duarte Loreto <happyguy_pt@hotmail.com>
	* src/DateHandler/_Date_pt.py: portugese datehandler accompanying translation
	* po/POTFILES.in: new file in POTFILE
	* src/DateHandler/Makefile.am: add new file for distribution

2007-10-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/Makefile.am: update
	* src/gen/db/Makefile.am: update